navbar overlap fix (z-index) & streamer follow btn

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -38,6 +38,7 @@ body {
 
     display: flex;
     flex-direction: row;
+    z-index: 1;
 }
 
 .streamers {
