--- a/client/src/components/LoginPage/LoginPage.scss
+++ b/client/src/components/LoginPage/LoginPage.scss
@@ -5,7 +5,7 @@
     right: 0;
     left: 0;
     background-color: rgba(1, 1, 1, 0.9);
-    z-index: 1;
+    z-index: 4;
 
     display: flex;
     align-items: center;
