--- a/client/src/components/Navbar/ExtendedBar.scss
+++ b/client/src/components/Navbar/ExtendedBar.scss
@@ -6,7 +6,6 @@
 
     display: flex;
     flex-direction: column;
-    z-index: -1;
 
     div {
         display: flex;
