--- a/client/src/components/Navbar/NavBar.scss
+++ b/client/src/components/Navbar/NavBar.scss
@@ -9,10 +9,10 @@
     background-color: #202e3a;
     //box-shadow: 0 0 10px black;
     box-shadow: 0px 0px 5px 3px black;
-    z-index: 1;
 
     height: 56px;
     transition: height 0.5s ease-in;
+    z-index: 3;
 
     padding: 0 10px;
     display: flex;
@@ -21,6 +21,7 @@
 
     &.navExpanded {
         height: 180px;
+        z-index: 1;
         transition: height 0.5s ease-in;
     }
 
