--- a/client/src/components/Streamer/Streamer.scss
+++ b/client/src/components/Streamer/Streamer.scss
@@ -38,6 +38,23 @@
     height: 200px;
 }
 
+.follow {
+    margin: 20px;
+    button {
+        outline: none;
+        border: none;
+        padding: 12px 50px;
+        border-radius: 5px;
+        background-color: #202e3a;
+        color: whitesmoke;
+
+        &:hover {
+            cursor: pointer;
+            background-color: #30475e;
+        }
+    }
+}
+
 .recent-games-header {
     height: 50px;
     display: flex;
